fixed bugs: logo stretched on iphone, no subject in invitation mail, lock on confi-button not centered

--- a/web/less/body.less
+++ b/web/less/body.less
@@ -589,6 +589,10 @@ body {
 						padding-top: 5px;
 						padding-left: @padding;
 						background: @background-buttonBar;
+
+                      div.imgButton {
+                        padding-left: 4px;
+                      }
 					}
 					
 					> div.otherActions {
